Implement Signup API of User: part 1

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     image: cafe-management-system-db
     ports:
       - "33061:3306"
+    environment:
+      MYSQL_ROOT_PASSWORD: password
     networks:
       - cafe-management-system-network
   cafe-management-system-be:
