--- a/cafe-management-system-be/src/main/resources/aplication.properties
+++ b/cafe-management-system-be/src/main/resources/aplication.properties
@@ -1,7 +1,7 @@
 spring.profiles.active=@spring.profiles.active@
 
 # Database connection
-spring.datasource.url=jdbc:mysql://localhost:33061/cafe?allowPublicKeyRetrieval=true&verifyServerCertificate=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.url=jdbc:mysql://localhost:3306/cafe?&verifyServerCertificate=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username=root
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
