--- a/cafe-management-system-db/Dockerfile
+++ b/cafe-management-system-db/Dockerfile
@@ -4,5 +4,7 @@ FROM mysql
 ENV MYSQL_ROOT_PASSWORD password
 
 ADD sql/create.sql /docker-entrypoint-initdb.d
+ADD sql/insert.sql /docker-entrypoint-initdb.d
+ADD sql/update.sql /docker-entrypoint-initdb.d
 
 EXPOSE 3306
