--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,14 @@ version: '3.8'
 services:
   cafe-management-system-db:
     image: cafe-management-system-db
+    container_name: cafe-management-system-db
     ports:
       - "33061:3306"
     networks:
       - cafe-management-system-network
   cafe-management-system-be:
     image: cafe-management-system-be
+    container_name: cafe-management-system-be
     depends_on:
       - cafe-management-system-db
     ports:
@@ -17,6 +19,7 @@ services:
       - cafe-management-system-network
   cafe-management-system-fe:
     image: cafe-management-system-fe
+    container_name: cafe-management-system-fe
     depends_on:
       - cafe-management-system-db
       - cafe-management-system-be
