cafe-management-system-be: update application.properties add pdf location

--- a/cafe-management-system-be/src/main/resources/application.properties
+++ b/cafe-management-system-be/src/main/resources/application.properties
@@ -20,5 +20,7 @@ spring.mail.password=*****
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-
 server.port=8081
+
+# Location of PDFs
+pdf.store.relative-location=SourceCode/pdfs
