--- a/cafe-management-system-be/src/test/resources/application.properties
+++ b/cafe-management-system-be/src/test/resources/application.properties
@@ -6,3 +6,9 @@ spring.datasource.password=
 
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.hibernate.ddl-auto=create-drop
+
+# Email configuration
+spring.mail.username=tester@outlook.com
+
+# Location of PDFs
+pdf.store.relative-location=SourceCode/pdfs
